force-app/main/default/objects/VideoComment__c/VideoComment__c.object-meta.xml
<CustomObject>
    <label>Video Comment</label>
    <nameField>
        <displayFormat>COMMENT-{00000000}</displayFormat>
        <label>Video Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>