force-app/main/default/objects/VideoComment__c/fields/RepostToSlack__c.field-meta.xml
<CustomField>
    <fullName>RepostToSlack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle this to post to Slack</description>
    <inlineHelpText>Check this to confirm reposting to slack</inlineHelpText>
    <label>Repost To Slack</label>
    <type>Checkbox</type>
</CustomField>