force-app/main/default/objects/VideoComment__c/fields/Video_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Title__c</fullName>
    <formula>Video__r.Title__c</formula>
    <label>Video Title</label>
    <type>Text</type>
</CustomField>